--- a/src/main/resources/templates/recipe/ordered.html
+++ b/src/main/resources/templates/recipe/ordered.html
@@ -16,7 +16,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading">
-                    <h1 class="panel-title">My Recipes!</h1>
+                    <h1 class="panel-title">My Recipes Sorted by Difficulty!</h1>
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
@@ -46,7 +46,6 @@
                 </div>
             </div>
             <a th:href="@{/}" class="btn btn-dark">Back to Main Menu</a>
-            <a th:href="@{'/recipe/all/ordered'}" class="btn btn-dark">Get Recipe Ordered by Difficulty</a>
         </div>
     </div>
 </div>
