--- a/src/main/resources/templates/recipe/all.html
+++ b/src/main/resources/templates/recipe/all.html
@@ -25,6 +25,7 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Name</th>
+                                <th>Difficulty</th>
                                 <th>View</th>
                             </tr>
                             </thead>
@@ -36,6 +37,7 @@
                             <tr th:each="recipe : ${recipes}">
                                 <td th:text="${recipe.id}">334</td>
                                 <td th:text="${recipe.name}">Tasty Goodnees 3</td>
+                                <td th:text="${recipe.difficulty}">Not Hard</td>
                                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
                             </tr>
                         </table>
