--- a/src/main/resources/templates/recipe/ordered.html
+++ b/src/main/resources/templates/recipe/ordered.html
@@ -36,6 +36,7 @@
                             <tr th:each="recipe : ${recipes}">
                                 <td th:text="${recipe.id}">334</td>
                                 <td th:text="${recipe.name}">Tasty Goodnees 3</td>
+                                <td th:text="${recipe.difficulty}">Not Hard</td>
                                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
                             </tr>
                         </table>
